sort.pancake.GatesPancake.scala.error
Compilation error:
GatesPancake:90: error: '(' expected but identifier found.
  if estLibre(0){
     ^